welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: value unary_! is not a member of Unit
  while(!estFinal) {
        ^ColumnByColumn:11: error: value cpt is not a member of Unit
possible cause: maybe a semicolon is missing before `value cpt'?
    }    cpt = cpt+1;
         ^ColumnByColumn:13: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
    ecritMessage()
    ^ColumnByColumn:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^ColumnByColumn:19: warning: enclosing method estFinal has result type Unit: return value discarded
    return true
    ^ColumnByColumn:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  } else return false
                ^ColumnByColumn:20: warning: enclosing method estFinal has result type Unit: return value discarded
  } else return false
         ^